mnginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginxserver
  #name: jupyter
spec:
  selector: 
    app: malabel
    #app: testmyserver
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: LoadBalancer
  #type: NodePort
